--- a/public/admin-dashboard/css/sidebar.css
+++ b/public/admin-dashboard/css/sidebar.css
@@ -55,9 +55,6 @@ body{
   gap: 0.7em;
   padding: 0 1rem;
 }
-.sidebar-nav a:hover {
-  background: rgba(6, 29, 27, 0.05);
-}
 .sidebar-nav ul ul {
   margin-top: 0.3rem;
   margin-left: 1rem;
@@ -74,6 +71,12 @@ body{
   margin-right: 0.2em;
   margin-top: 1rem;
   padding: 0 !important;
+}
+
+.sidebar-link.active {
+    text-decoration: underline;
+    color: #2a2a2a;
+    font-weight: 400;
 }
 
 @media (max-width: 900px) {
